--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -56,6 +56,7 @@
   community.general.cargo:
     name: "{{ item }}"
     locked: true 
+    executable: "{{ lookup('env','HOME') }}/.cargo/bin/cargo"
   with_items:
     - tokei
     - bottom
